# python-training

./: .gitignore  Chapter2-core-concepts.md  Chapter4-Import-and-Editing-Data.md  Chapter6-Aggregations.md  Chapter7-File-IO-Mastery.md  Chapter9-Case-Study.md  README.md  main.py
polars-for-power-users/: Chapter10-Next-Steps.md  Chapter3-data-types-demystified.md  Chapter5-FiltersandDataTricks.md  Chapter7-File-IO-Mastery.md  Chapter8-TurboCharging-Performace-Lazyframes.md  README.md
python-data-visualization/: Chapter03.ipynb  ch01-welcome.md  ch02-visualization-concepts.md  ch03-matplotlib.md  main.py  pyproject.toml
