[project]
name = "python-data-visualization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipdb>=0.13.13",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "notebook>=7.4.4",
    "pandas>=2.3.1",
    "polars>=1.31.0",
    "statsmodels>=0.14.5",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
]
